gitops/system/traefik/templates/ingressroutes/traefik-dashboard.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`{any:.+}`) && PathPrefix(`/traefik`)
      services:
        - name: api@internal
          kind: TraefikService
